@@ -58,6 +58,13 @@ class PluginModifierUnescapeTests extends PHPUnit_Framework_TestCase {
         Smarty::$_MBSTRING = true;
     }
     
+    public function testUrl()
+    {
+        $encoded = "a%C3%A4%D0%97%D0%B4%D1%80%D0%B0%3E%3C%26amp%3B%C3%A4%C3%A4%D0%B2%D1%81%D1%81%D1%82%D0%B2%3F%3D%2B%D1%83%D0%B9%D1%82%D0%B5";
+        $result = "aäЗдра><&amp;ääвсств?=+уйте";
+        $tpl = $this->smarty->createTemplate('eval:{"' . $encoded . '"|unescape:"url"}');
+        $this->assertEquals($result, $this->smarty->fetch($tpl));
+    }
 } 
 
 ?>
